--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .banner{
     height: 100%;
     width: 100%;
-    background-image: url(/Assets/background.png);
+    background-image: url(/background.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
